# amdCTRL

./: .gitignore  .gitmodules  AmdCtrl.kdev4  CMakeLists.txt  README.md  main.cpp
.kdev4/: AmdCtrl.kdev4
src/: CMakeLists.txt  GPU.cpp  GPU.hpp  GPUSettings.hpp  GPUWidgets.cpp  GPUWidgets.hpp  MainWindow.cpp  MainWindow.hpp  MonitorWindow.cpp  MonitorWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp  Shell.cpp  Shell.hpp  commandrunner.cpp  commandrunner.hpp
